gapcmon (0.8.5-0) stable; urgency=normal
* Tue Jan 23 2007 James Scott, Jr. <skoona@users.sourceforge.net>
- Removed gnomeVFS from package which released these defined
  gapcmon.c:#ifndef HAVE_GNOMEVFS_SOCKET_SET_TIMEOUT
  gapcmon.c:#ifdef GNOMEVFS_REQUIRES_CANCELLATION
- Replace gnomeVFS with GIOChannel based socket programming
  GIOChannels were already being used in other area in gapc
  this make the prep for porting to w32 easier.

gapcmon (0.8.4-0) stable; urgency=normal
* Sat Dec 30 2006 James Scott, Jr. <skoona@users.sourceforge.net>
- Added cb_util_manage_events() to control visibility.  This
  allows the app to startup in icon mode, if control.panel
  use_systray is checked.

gapc_devel (0.7.0-1) stable; urgency=normal
* Tue May 29 2006 James Scott, Jr. <skoona@users.sourceforge.net>
- Rewrite lg_graph_draw_veritical_text() to remove V2.6 api.
- Fixed gapcmon.desktop to support current gnome systems (Fedora 5) 
  - changed the order of statements

gapc_devel (0.7.0-0) stable; urgency=normal
* Thru Apr 18 2006 James Scott, Jr. <skoona@users.sourceforge.net>
- Rewrite to include desktop independant features completed.
- This module replace all other interations of gapcmon: including
  gapc, gpanel, gpanel_apcmon, etc.

gapc_devel (0.6.2-0) stable; urgency=normal
* Thru Apr 6 2006 James Scott, Jr. <skoona@users.sourceforge.net>
- Implemented the FreeDesktop.org spec for notification_area icons
  using modified source from gnome.cvs:libegg.
- Added a paned window to help user manage size of icons and notebooks
- Attempted to implement true alphabetic sort of icons labels, by adding
  label text to main.window icons ( not working the why I would like )
- Reviewed gdk_threads_enter() useage and removed duplicates from
  gtkglgraph.c in response to a user bug ( no x|y-labels on chart-N+1)  
- Several routine consolidated or parameter-ized.

gapc_devel (0.6.1-0) stable; urgency=normal
* Sat Apr 1 2006 James Scott, Jr. <skoona@users.sourceforge.net>